temporary easy fix for spacing issues

--- a/static/style.css
+++ b/static/style.css
@@ -98,7 +98,9 @@ button{
     text-align:center;
 }
 
-
+.spacer{
+    height:10px;
+}
 
 
 /************************/
